# genai-poc

./: README.md  pyproject.toml
module1/src/: main.py  readme.md
module_1/src/: main.py  readme.md
module_2/: readme.md
module_2/src/: main.py
