[tool.poetry]
name = "genai-poc"
version = "0.1.0"
description = "A Python project for learning about ChatGPT, LangChain, RAGs and AI Agents"
authors = ["Alejoboga20 <user@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
